--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs_folder = \"observables\"\n",
-    "q_folder = \"overlaps\"\n",
+    "obs_folder = \"observables2D\"\n",
+    "q_folder = \"overlaps2D\"\n",
     "num_replicas = 6\n",
     "max_points = int(1e5)\n",
     "N = 5**2"
